--- a/first/templates/lo_up/login.html
+++ b/first/templates/lo_up/login.html
@@ -15,7 +15,7 @@
     
 
     
- 
+{% comment %}  
     <section class = "diu">
         
         <img src="{% static 'image/hill1.png' %}" id="hill1">
@@ -26,9 +26,11 @@
         <img src="{% static 'image/tree.png' %}" id="tree">
         <img src="{% static 'image/leaf.png' %}" id="leaf">
         <img src="{% static 'image/plant.png' %}" id="plant">
-    </section> 
+    </section>   {% endcomment %}
 
 
+
+    
 
  
 
@@ -46,12 +48,12 @@
                 {% csrf_token %}
                 <div class = "input-box">
                     <span class = "icon"><ion-icon name="person"></ion-icon></span>
-                    <input type="text" required id = "username">
+                    <input type="text" required name = "username" id = "username"> 
                     <label >Username</label>
                 </div>
                 <div class = "input-box">
                     <span class = "icon"><ion-icon name="lock-closed"></ion-icon></span>
-                    <input type="password" required id = "password">
+                    <input type="password" required name = "password" id = "password">
                     <label >Password</label>
                 </div>
                 <div class="remember-forgot">
@@ -68,30 +70,26 @@
 
    
 
-
-
-            {% comment %} This is a pandas Face {% endcomment %}
-            <div class="ear-l"></div>
-            <div class="ear-r"></div>
-            <div class="pada-face">
-                <div class="blush-l"></div>
-                <div class="blush-r"></div>
-        
-                <div class="eye-l">
-                    <div class="eyeball-l"></div>
-                </div>
-                <div class="eye-r">
-                    <div class="eyeball-r"></div>
-                </div>
-                <div class="nose"></div>
-                <div class="mouth"></div>
-                <div class="hand-r"></div>
-                <div class="hand-l"></div>
-                <div class="leg-r"></div>
-                <div class="leg-l"></div>
+        {% comment %} This is a pandas Face {% endcomment %}
+        {% comment %} <div class="ear-l"></div>
+        <div class="ear-r"></div>
+        <div class="pada-face">
+            <div class="blush-l"></div>
+            <div class="blush-r"></div>
+    
+            <div class="eye-l">
+                <div class="eyeball-l"></div>
             </div>
-
-
+            <div class="eye-r">
+                <div class="eyeball-r"></div>
+            </div>
+            <div class="nose"></div>
+            <div class="mouth"></div>
+            <div class="hand-r"></div>
+            <div class="hand-l"></div>
+            <div class="leg-r"></div>
+            <div class="leg-l"></div>
+        </div> {% endcomment %}
 
 
 
