--- a/first/static/css/base.css
+++ b/first/static/css/base.css
@@ -19,87 +19,93 @@ body{
 
 header{
     position: absolute;
-    top: 0;
-    left: 0;
+
     width: 100%;
-    padding: 4rem 10rem;
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: center;
-    z-index: 100;
+    padding: 1rem 6rem 0rem;
+    z-index: 2;
 }
 
 .logo{
-    height: 150px;
-    width: 170px;
-    margin-top: -40px;
+    width: 8rem;
+    height: 8rem;
 }
 
 
 /* This is the nev bar */
-.navigation{
-    margin-left: 160px;
-}
+.navigation {
+    display: flex;
+    gap: 4rem;
+  }
 
 
-.navigation a {
-    text-decoration: none;
+
+  .navigation-link {
+    font-size: 1.5rem;
+    font-weight: 500;
     color: #359381;
-    padding: 6px 15px;
-    border-radius: 20px;
-    margin: 0 10px;
-    font-weight: 600;
-    margin-left: 50px;
-}
+    padding: .6rem 1.5rem;
+    border-radius: 2rem;
+    text-decoration: none;
+    transition: color 0.2s ease-in-out;
 
-.navigation a:hover,
-.navigation a.active{
+  }
+
+
+
+.navigation-link:hover,
+.navigation-link.active{
     background-color: #359381;
     color: white;
 }
 
 
 /* This is the sing up and login buttun */
+.user-navigation {
+    display: flex;
 
-.log{
-    margin-left: 240px;
-}
+  }
 
-.log a{
-    text-decoration: none;
+
+
+  .user-navigation-link {
+    font-size: 1.5rem;
+    font-weight: 500;
     color: white;
-    padding: 6px 13px;
-    border-radius: 20px;
-    margin: 0 10px;
-    font-weight: 600;
+    padding: .6rem 1.5rem;
+    border-radius: 2rem;
     background-color: #359381;
-}
+    text-decoration: none;
+    transition: color 0.2s ease-in-out;
+  }
 
 
 /* This is the picture section  */
 
 .diu {
     position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     height: 100vh;
-
 }
 
 #text {
-    position: absolute;
-    font-size: 5em;
-    color: #FFF;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, .8);
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 7rem;
+    color: #fff;
+    text-shadow: 0.2rem 0.2rem 0.4rem rgba(0, 0, 0, 0.8);
 }
-
 
 .diu img {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
+    height: 100%;
+    object-fit: cover;
     pointer-events: none;
 }
 
@@ -107,17 +113,17 @@ header{
 .sec {
     position: relative;
     background: #003329;
-    padding: 100px;
+    padding: 10rem;
 }
 
 .sec h2{
-    font-size: 3em;
+    font-size: 4.8rem;
     color: #fff;
-    margin-bottom: 10px;
+    margin-bottom: 1rem;
 }
 
 .sec{
-    font-size: 1em;
+    font-size: 1.6rem;
     color: #fff;
     font-weight: 300;
 }
@@ -136,26 +142,26 @@ header{
 
 .all .b-all{
    
-    padding-top: 60px;
-    padding-left: 60px;
+    padding-top: 6rem;
+    padding-left: 6rem;
 
 }
 
 .service{
-    width: 350px;
-    height: 340px;
+    width: 35rem;
+    height: 34rem;
     background: transparent;
-    border: 2px solid rgba(255, 245, 245, 0.5);
-    border-radius: 20px;
-    backdrop-filter: blur(20px);
-    box-shadow: 0 0 30px rgba(147, 246, 216, 0.9);
+    border: .2rem solid rgba(255, 245, 245, 0.5);
+    border-radius: 2rem;
+    backdrop-filter: blur(2rem);
+    box-shadow: 0 0 3rem rgba(147, 246, 216, 0.9);
     justify-content: center;
     align-items: center;
     overflow: hidden;
     float: left;
-    padding: 20px 0;
-    padding: 30px;
-    margin-left: 100px;
+    padding: 2rem 0;
+    padding: 3rem;
+    margin-left: 10rem;
 }
 
 
@@ -169,7 +175,7 @@ header{
 .service h1{
     color: white;
     font-weight: 600;
-    padding-bottom: 8px;
+    padding-bottom: .8rem;
 }
 
 
@@ -180,11 +186,11 @@ header{
     content: "";
     position: absolute;
     align-content: center;
-    top: 70px;
+    top: 7rem;
     background-color: white;
-    height: 3px;
+    height: .3rem;
     box-sizing: border-box;
-    width: 90px;
+    width: 9rem;
 }
 
 
@@ -193,7 +199,7 @@ header{
 
 .service p{
     color: #fff;
-    margin-top: 30px;
+    margin-top: 3rem;
 }
 
 
@@ -210,20 +216,22 @@ header{
 }
 
 .container{
-    max-width: 1170px;
+
+    max-width: 90%;
+    margin: 0% 5%;
 }
 
 .row{
     display: flex;
 
-    width: 137%;
-    height: 250px;
+    width: 100%;
+    height: 25rem;
     background: transparent;
-    border: 2px solid rgba(183, 147, 147, 0.5);
-    backdrop-filter: blur(20px);
-    box-shadow: 0 0 30px rgba(206, 198, 198, 0.9);
-    border-top-left-radius: 50px;
-    border-top-right-radius: 50px;
+    border: .2rem solid rgba(183, 147, 147, 0.5);
+    backdrop-filter: blur(2rem);
+    box-shadow: 0 0 3rem rgba(206, 198, 198, 0.9);
+    border-top-left-radius: 5rem;
+    border-top-right-radius: 5rem;
 
 }
 
@@ -234,19 +242,19 @@ ul{
 .footer{
     background-color: #003329;
     position: relative;
+    width: 100%;
 }
 
 .footer-col{
-    margin-top: 50px;
-    margin-left: 220px;
+    margin: 3% 9%;
 }
 
 
 .footer-col h4{
-    font-size: 18px;
+    font-size: 1.8rem;
     color: #fff;
     text-transform: capitalize;
-    margin-bottom: 35px;
+    margin-bottom: 3.5rem;
     font-weight: 500;
     position: relative;
 }
@@ -255,21 +263,21 @@ ul{
     content: "";
     position: absolute;
     left: 0;
-    bottom: -4px;
+    bottom: -.4rem;
     background-color: #359381;
-    height: 2px;
+    height: .2rem;
     box-sizing: border-box;
-    width: 60px;
+    width: 6rem;
 }
 
 
 .footer-col ul li:not(:last-child){
-    margin-bottom: 10px;
+    margin-bottom: 1rem;
 }
 
 
 .footer-col ul li a{
-    font-size: 16px;
+    font-size: 1.6rem;
     text-transform: capitalize;
     color: #FFF;
     text-decoration: none;
@@ -282,18 +290,18 @@ ul{
 
 .footer-col ul li a:hover {
     color: #ffffffff;
-    padding-left: 10px;
+    padding-left: 1rem;
 }
 
 
 .footer-col .social-links a{
     display: inline-block;
-    height: 40px;
-    width: 40px;
+    height: 4rem;
+    width: 4rem;
     background-color: rgba(255,255,2555,0.2);
-    margin: 0 10px 10px 0;
+    margin: 0 1rem 1rem 0;
     text-align: center;
-    line-height: 40px;
+    line-height: 4rem;
     border-radius: 50%;
     color: #fff;
     transition: all 0.5s ease;
@@ -303,4 +311,47 @@ ul{
 .footer-col .social-links a:hover{
     color: #24262b;
     background-color: #fff;
+}
+
+
+
+
+/* This is the media Section */
+@media(max-width:998px){
+    html{
+        font-size: 55%;
+    }
+}
+@media(max-width:798px){
+    html{
+        font-size: 50%;
+    }
+}
+
+@media(max-width:698){
+    html{
+        font-size: 40%;
+    }
+}
+
+@media(max-width:599px){
+    html{
+        font-size: 35%;
+    }
+}
+
+@media(max-width:499px){
+    html{
+        font-size: 30%;
+    }
+}
+@media(max-width:399px){
+    html{
+        font-size: 25%;
+    }
+}
+@media(max-width:299px){
+    html{
+        font-size: 20%;
+    }
 }
