--- a/first/templates/common_code/base.html
+++ b/first/templates/common_code/base.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block title %}HomePage{% endblock title %}</title>
 
 
@@ -18,7 +18,7 @@
    
 </head>
 <body>
-    <header>
+    {% comment %} <header>
       <img src="{% static 'image/bad.jpg' %}" class = "logo">
       <nav class="navigation">
         <a href="#" class = "active">Home</a>
@@ -26,11 +26,28 @@
         <a href="{% url 'signup' %}">Service</a>
         <a href="{% url 'signup' %}">Upload</a>
       </nav>
-
       <nav class = "log">
         <a href="{% url 'login' %}">Login</a>
         <a href="{% url 'signup' %}">SingUp</a>
       </nav>
+    </header> {% endcomment %}
+
+
+
+      <header class="header">
+        <a href="#" class="logo-link">
+          <img src="{% static 'image/bad.jpg' %}" alt="Logo" class="logo">
+        </a>
+        <nav class="navigation">
+          <a href="#" class="navigation-link active">Home</a>
+          <a href="#about" class="navigation-link">About</a>
+          <a href="{% url 'signup' %}" class="navigation-link">Services</a>
+          <a href="{% url 'signup' %}" class="navigation-link">Upload</a>
+        </nav>
+        <nav class="user-navigation">
+          <a href="{% url 'login' %}" class="user-navigation-link">Login</a>
+          <a href="{% url 'signup' %}" class="user-navigation-link">Sign Up</a>
+        </nav>
     </header>
 
     <section class = "diu">
