--- a/first/static/css/base.css
+++ b/first/static/css/base.css
@@ -1,6 +1,7 @@
 *{
     margin: 0rem;
     padding: 0rem;
+    box-sizing: border-box;
     font-family: 'Poppoins', sans-serif;
 }
 
@@ -65,7 +66,7 @@ header{
 /* This is the sing up and login buttun */
 .user-navigation {
     display: flex;
-
+    gap: 2rem;
   }
 
 
@@ -85,18 +86,19 @@ header{
 /* This is the picture section  */
 
 .diu {
-    position: relative;
+    display: flex;
+    justify-content: center; /* Horizontal centering */
+    align-items: center;
     height: 100vh;
+    position: relative;
 }
 
-#text {
+.diu_text {
     position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-size: 7rem;
+    font-size: 5rem;
     color: #fff;
     text-shadow: 0.2rem 0.2rem 0.4rem rgba(0, 0, 0, 0.8);
+    text-align: center; /* Add text-align property */
 }
 
 .diu img {
@@ -137,17 +139,15 @@ header{
 .all{
     background-color: #003329;
     position: relative;
-    min-height: 70vh;
+    padding: 5% 5%;
 }
 
-.all .b-all{
-   
-    padding-top: 6rem;
-    padding-left: 6rem;
-
+.all .b-all {
+    display: flex;
+    justify-content: center;
 }
 
-.service{
+.service {
     width: 35rem;
     height: 34rem;
     background: transparent;
@@ -155,13 +155,9 @@ header{
     border-radius: 2rem;
     backdrop-filter: blur(2rem);
     box-shadow: 0 0 3rem rgba(147, 246, 216, 0.9);
-    justify-content: center;
-    align-items: center;
     overflow: hidden;
-    float: left;
-    padding: 2rem 0;
     padding: 3rem;
-    margin-left: 10rem;
+    margin: 2% 2%;
 }
 
 
@@ -208,13 +204,6 @@ header{
 
 
 /* This is the foote part */
-
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
 .container{
 
     max-width: 90%;
@@ -348,6 +337,10 @@ ul{
 @media(max-width:399px){
     html{
         font-size: 25%;
+    }
+    .all .b-all{
+        flex-direction: column;
+        justify-content: center;
     }
 }
 @media(max-width:299px){
