--- a/first/static/css/dashboard.css
+++ b/first/static/css/dashboard.css
@@ -1,10 +1,15 @@
-
-
 *{
-    margin: 0px;
-    padding: 0px;
+    margin: 0rem;
+    padding: 0rem;
     box-sizing: border-box;
     font-family: 'Poppoins', sans-serif;
+}
+
+html{
+    /* 100% = 16rem default font size
+    what if we want 10rem as default font size 
+    so we will divide the 10/16 = .625 * 100 = 62.5% */
+    font-size: 62.5%;
 }
 
 body{
@@ -15,74 +20,77 @@ body{
 
 header{
     position: absolute;
-    top: 0;
-    left: 0;
     width: 100%;
-    padding: 40px 100px;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    z-index: 100;
-}
-
-.logo{
-    margin-left: -40px;
-    margin-top: -60px;
-    height: 150px;
-    width: 200px;
-
-}
-
-
-/* This is the nev bar  */
-.navigation{
-    margin-left: 130px;
-}
-
-
-.navigation a {
-    text-decoration: none;
-    color: #359381;
-    padding: 6px 15px;
-    border-radius: 20px;
-    margin: 0 10px;
-    font-weight: 600;
-    margin-left: 50px;
-}
-
-.navigation a:hover,
-.navigation a.active{
-    background-color: #359381;
-    color: #fff;
-}
-
-
-
-
-/* This is the picture section   */
-
-.diu {
-    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 1rem 6rem 0rem;
+    z-index: 2;
+    gap: 25%;
+}
+
+.logo{
+    width: 8rem;
+    height: 8rem;
+}
+
+
+/* This is the nev bar */
+.navigation {
+    display: flex;
+    gap: 4rem;
+    justify-content: center;
+    align-items: center;
+  }
+
+
+
+  .navigation-link {
+    font-size: 1.5rem;
+    font-weight: 500;
+    color: #359381;
+    padding: .6rem 1.5rem;
+    border-radius: 2rem;
+    text-decoration: none;
+    transition: color 0.2s ease-in-out;
+
+  }
+
+
+
+.navigation-link:hover,
+.navigation-link.active{
+    background-color: #359381;
+    color: white;
+}
+
+
+
+/* This is the picture section  */
+
+.diu {
+    display: flex;
+    justify-content: center; /* Horizontal centering */
+    align-items: center;
     height: 100vh;
-
+    position: relative;
 }
 
-#text {
-    position: absolute;
-    font-size: 5em;
-    color: #FFF;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, .8);
+.diu_text {
+    position: fixed;
+    font-size: 5rem;
+    color: #fff;
+    text-shadow: 0.2rem 0.2rem 0.4rem rgba(0, 0, 0, 0.8);
+    text-align: center; /* Add text-align property */
 }
-
 
 .diu img {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
+    height: 100%;
+    object-fit: cover;
     pointer-events: none;
 }
 
@@ -90,17 +98,17 @@ header{
 .sec {
     position: relative;
     background: #003329;
-    padding: 100px;
+    padding: 10rem;
 }
 
 .sec h2{
-    font-size: 3em;
+    font-size: 4.8rem;
     color: #fff;
-    margin-bottom: 10px;
+    margin-bottom: 1rem;
 }
 
 .sec{
-    font-size: 1em;
+    font-size: 1.6rem;
     color: #fff;
     font-weight: 300;
 }
@@ -108,31 +116,24 @@ header{
 
 
 
-
-
-/* This is the foote part  */
-
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
+/* This is the foote part */
 .container{
-    max-width: 1170px;
+
+    max-width: 90%;
+    margin: 0% 5%;
 }
 
 .row{
     display: flex;
 
-    width: 137%;
-    height: 250px;
+    width: 100%;
+    height: 25rem;
     background: transparent;
-    border: 2px solid rgba(183, 147, 147, 0.5);
-    backdrop-filter: blur(20px);
-    box-shadow: 0 0 30px rgba(206, 198, 198, 0.9);
-    border-top-left-radius: 50px;
-    border-top-right-radius: 50px;
+    border: .2rem solid rgba(183, 147, 147, 0.5);
+    backdrop-filter: blur(2rem);
+    box-shadow: 0 0 3rem rgba(206, 198, 198, 0.9);
+    border-top-left-radius: 5rem;
+    border-top-right-radius: 5rem;
 
 }
 
@@ -143,19 +144,19 @@ ul{
 .footer{
     background-color: #003329;
     position: relative;
+    width: 100%;
 }
 
 .footer-col{
-    margin-top: 50px;
-    margin-left: 220px;
+    margin: 3% 9%;
 }
 
 
 .footer-col h4{
-    font-size: 18px;
+    font-size: 1.8rem;
     color: #fff;
     text-transform: capitalize;
-    margin-bottom: 35px;
+    margin-bottom: 3.5rem;
     font-weight: 500;
     position: relative;
 }
@@ -164,21 +165,21 @@ ul{
     content: "";
     position: absolute;
     left: 0;
-    bottom: -4px;
+    bottom: -.4rem;
     background-color: #359381;
-    height: 2px;
+    height: .2rem;
     box-sizing: border-box;
-    width: 60px;
+    width: 6rem;
 }
 
 
 .footer-col ul li:not(:last-child){
-    margin-bottom: 10px;
+    margin-bottom: 1rem;
 }
 
 
 .footer-col ul li a{
-    font-size: 16px;
+    font-size: 1.6rem;
     text-transform: capitalize;
     color: #FFF;
     text-decoration: none;
@@ -191,18 +192,18 @@ ul{
 
 .footer-col ul li a:hover {
     color: #ffffffff;
-    padding-left: 10px;
+    padding-left: 1rem;
 }
 
 
 .footer-col .social-links a{
     display: inline-block;
-    height: 40px;
-    width: 40px;
+    height: 4rem;
+    width: 4rem;
     background-color: rgba(255,255,2555,0.2);
-    margin: 0 10px 10px 0;
+    margin: 0 1rem 1rem 0;
     text-align: center;
-    line-height: 40px;
+    line-height: 4rem;
     border-radius: 50%;
     color: #fff;
     transition: all 0.5s ease;
@@ -215,17 +216,48 @@ ul{
 }
 
 
-@media(max-width: 767px){
-    .footer-col{
-        width: 50%;
-        margin-bottom: 30px;
+
+
+/* This is the media Section */
+@media(max-width:998px){
+    html{
+        font-size: 55%;
+    }
+}
+@media(max-width:798px){
+    html{
+        font-size: 50%;
     }
 }
 
+@media(max-width:698){
+    html{
+        font-size: 40%;
+    }
+}
 
-@media(max-width: 574px){
-    .footer-col{
-        width: 100%;
-        margin-bottom: 30px;
+@media(max-width:599px){
+    html{
+        font-size: 35%;
+    }
+}
+
+@media(max-width:499px){
+    html{
+        font-size: 30%;
+    }
+}
+@media(max-width:399px){
+    html{
+        font-size: 25%;
+    }
+    .all .b-all{
+        flex-direction: column;
+        justify-content: center;
+    }
+}
+@media(max-width:299px){
+    html{
+        font-size: 20%;
     }
 }
