--- a/first/templates/common_code/base.html
+++ b/first/templates/common_code/base.html
@@ -58,7 +58,9 @@
         <img src="{% static 'image/hill4.png' %}" id="hill4">
         <img src="{% static 'image/hill5.png' %}" id="hill5">
         <img src="{% static 'image/tree.png' %}" id="tree">
-        <h2 id = "text">DIU QUESTION BANK</h2>
+        <div class="diu_text">
+          <h2 id = "text">DIU QUESTION BANK</h2>
+        </div>
         <img src="{% static 'image/leaf.png' %}" id="leaf">
         <img src="{% static 'image/plant.png' %}" id="plant">
     </section>
@@ -75,7 +77,7 @@
 
 
 
-   <div class = "all">
+   <section class = "all">
       <div class = "b-all">
         <div class = "service" id = "about">
           <h1>ABOUT</h1>
@@ -100,7 +102,7 @@
           </p>
         </div>
       </div>
-   </div>
+   </section>
 
 
 
